--- a/components/Invoice/InvoiceItem.module.css
+++ b/components/Invoice/InvoiceItem.module.css
@@ -13,6 +13,10 @@
     margin: 25px 0 10px;
 }
 
+.detailedTitle {
+    display: none;
+}
+
 .description {
     color: #000;
     font-weight: 700;
@@ -44,5 +48,15 @@
 
     .title {
         margin: 0;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .shortTitle {
+        display: none;
+    }
+
+    .detailedTitle {
+        display: block;
     }
 }
