--- a/components/Form/TextInput.module.css
+++ b/components/Form/TextInput.module.css
@@ -45,7 +45,11 @@
 }
 
 .input:focus+.label {
-    transform: translate(-6px, 15%) scale(.75)
+    transform: translate(-6px, 15%) scale(.75);
+}
+
+.input.shrink+.label {
+    transform: translate(-6px, 15%) scale(.75);
 }
 
 [dir="ltr"] .input:focus+.label {
