Refine input style and build

--- a/components/Form/TextInput.module.css
+++ b/components/Form/TextInput.module.css
@@ -55,3 +55,7 @@
 [dir="ltr"] .input:focus+.label {
     transform: translate(6px, 15%) scale(.75)
 }
+
+[dir="ltr"] .input.shrink+.label {
+    transform: translate(6px, 15%) scale(.75)
+}
